@@ -19,6 +19,7 @@ package org.apache.nutch.service;
 
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.TimeUnit;
@@ -42,6 +43,9 @@ import org.apache.nutch.service.impl.ConfManagerImpl;
 import org.apache.nutch.service.impl.JobFactory;
 import org.apache.nutch.service.impl.JobManagerImpl;
 import org.apache.nutch.service.impl.NutchServerPoolExecutor;
+import org.apache.nutch.service.model.response.JobInfo;
+import org.apache.nutch.service.model.response.JobInfo.State;
+import org.apache.nutch.service.resources.AdminResource;
 import org.apache.nutch.service.resources.ConfigResource;
 import org.apache.nutch.service.resources.DbResource;
 import org.apache.nutch.service.resources.JobResource;
@@ -59,11 +63,11 @@ public class NutchServer {
   private static final int JOB_CAPACITY = 100;
 
   private static Integer port = DEFAULT_PORT;
-	private static String host  = LOCALHOST;
+  private static String host  = LOCALHOST;
 
   private static final String CMD_HELP = "help";
   private static final String CMD_PORT = "port";
-	private static final String CMD_HOST = "host";
+  private static final String CMD_HOST = "host";
 
   private long started;
   private boolean running;
@@ -72,7 +76,7 @@ public class NutchServer {
   private JAXRSServerFactoryBean sf; 
 
   private static FetchNodeDb fetchNodeDb;
-  
+
   private static NutchServer server;
 
   static {
@@ -107,9 +111,9 @@ public class NutchServer {
   }
 
   private void start() {
-		LOG.info("Starting NutchServer on {}:{}  ...", host, port);
+    LOG.info("Starting NutchServer on {}:{}  ...", host, port);
     try{
-			String address = "http://" + host + ":" + port;
+      String address = "http://" + host + ":" + port;
       sf.setAddress(address);
       sf.create();
     }catch(Exception e){
@@ -118,8 +122,8 @@ public class NutchServer {
 
     started = System.currentTimeMillis();
     running = true;
-		LOG.info("Started Nutch Server on {}:{} at {}", host, port, started);
-		System.out.println("Started Nutch Server on " + host + ":" + port + " at " + started);
+    LOG.info("Started Nutch Server on {}:{} at {}", host, port, started);
+    System.out.println("Started Nutch Server on " + host + ":" + port + " at " + started);
   }
 
   private List<Class<?>> getClasses() {
@@ -127,6 +131,7 @@ public class NutchServer {
     resources.add(JobResource.class);
     resources.add(ConfigResource.class);
     resources.add(DbResource.class);
+    resources.add(AdminResource.class);
     return resources;
   }
 
@@ -147,7 +152,7 @@ public class NutchServer {
   public FetchNodeDb getFetchNodeDb(){
     return fetchNodeDb;
   }
-  
+
   public boolean isRunning(){
     return running;
   }
@@ -170,9 +175,9 @@ public class NutchServer {
       port = Integer.parseInt(commandLine.getOptionValue(CMD_PORT));
     }
 
-		if (commandLine.hasOption(CMD_HOST)) {
-			host = commandLine.getOptionValue(CMD_HOST);
-		}
+    if (commandLine.hasOption(CMD_HOST)) {
+      host = commandLine.getOptionValue(CMD_HOST);
+    }
 
     startServer();
   }
@@ -188,12 +193,27 @@ public class NutchServer {
     OptionBuilder.withDescription("The port to run the Nutch Server. Default port 8081");
     options.addOption(OptionBuilder.create(CMD_PORT));
 
-		OptionBuilder.withArgName("host");
-		OptionBuilder.hasOptionalArg();
-		OptionBuilder.withDescription("The host to bind the Nutch Server to. Default is localhost.");
-		options.addOption(OptionBuilder.create(CMD_PORT));
+    OptionBuilder.withArgName("host");
+    OptionBuilder.hasOptionalArg();
+    OptionBuilder.withDescription("The host to bind the Nutch Server to. Default is localhost.");
+    options.addOption(OptionBuilder.create(CMD_PORT));
 
     return options;
   }
 
+  public boolean canStop(boolean force){
+    if(force)
+      return true;
+
+    Collection<JobInfo> jobs = getJobManager().list(null, State.RUNNING);
+    return jobs.isEmpty();
+  }
+
+  public int getPort() {
+    return port;
+  }
+
+  public void stop() {
+    System.exit(0);
+  }
 }
