@@ -2,6 +2,8 @@ Nutch Change Log
   
 Nutch Current Development 1.11-SNAPSHOT
 
+* NUTCH-2031 Create Admin End point for Nutch 1.x REST service (Sujen Shah via mattmann)
+
 * NUTCH-2015 Make FetchNodeDb optional (off by default) if NutchServer is not used (Sujen Shah via mattmann)
 
 * NUTCH-208 http: proxy exception list: (Matthias Günter, siren, markus, lewismc)
